264
I think it is character \u2019 .  If your terminal supports this character, then what you observe is:
```scala
  scala> 't'
  <console>:1: error: illegal character: *
      't'
      ^
  <console>:1: error: illegal character: *
      't'
        ^
```
That looks confusing, because it is telling you that a normal looking quote character is not correct, and you can't tell why.

I don't have a strong feeling about whether the open quote should be supported, but if they were then that would certainly address the problem that prompted me to post this issue.  In the initial post, I suggested an error, simply because you can always add to the language later but never remove.  Also, pragmatically, anyone who implements it might also need to update the spec document.
